2000-05-01  NotZed  <NotZed@HelixCode.com>

	* pixmaps.h: Added envelope-deleted state.

	* folder-browser-factory.c: Setup callback for actual delete op.
	(control_activate): Setup a tool menu item to expnge deleted
	messages.

	* mail-ops.c (delete_msg): Toggle the delete flag on a message.
	(expunge_folder): New function to expunge deleted messages from
	the current folder.

	* folder-browser.c (folder_browser_gui_init): A hackish little
	quick-search entry.
	(search_activate): Perform a quick-search on the folder subject
	only.
	(folder_browser_gui_init): Add an option meny to the search line.	
	(create_option_menu): Build the option menu from a table.
	(search_set): Build a search from another string whent he option
	menu or text item is changed.  5 search options are defined so
	far.

	* message-list.c (get_message_info): If there is an active search,
	then get the data from that ... use this instead of
	_get_message_info().
	(ml_row_count): If we have an active search, get the info from its
	result.
	(select_msg): Changed to use get_message_info, so searches work.
	(ml_value_at): And same here.
	(message_list_init_renderers): Added a 3rd state to message_status
	= deleted.
	(ml_value_at): Show the message state as deleted, if it is marked
	for deletion.
	(folder_changed): When the folder changes, update the display.
	(message_list_set_folder): Connect to the folder_changed event
	here.
	(message_changed): Callback to update the display when the message
	changes.
	(select_msg): And connect to the message_changed signal so we know
	when it cahgnes.

	* mail-display.c: Include missing errno.h.

2000-04-30  Dan Winship  <danw@helixcode.com>

	* session.c (session_providers_init): This is no longer necessary.

	* mail-ops.c (fetch_mail): Remove kludge to load remote provider,
	as camel can do it by itself now.

2000-04-29  Dan Winship  <danw@helixcode.com>

	* mail-display.c (on_link_clicked): Handle clicks on "cid" URLs by
	popping up a "Save Attachment" dialog.